; ModuleID = '/home/carl/AnghaBench/skynet/skynet-src/extr_skynet_socket.c_skynet_socket_udp_connect.c'
source_filename = "/home/carl/AnghaBench/skynet/skynet-src/extr_skynet_socket.c_skynet_socket_udp_connect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.skynet_context = type { i32 }

@SOCKET_SERVER = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @skynet_socket_udp_connect(%struct.skynet_context* %0, i32 %1, i8* %2, i32 %3) #0 {
  %5 = alloca %struct.skynet_context*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  store %struct.skynet_context* %0, %struct.skynet_context** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load i32, i32* @SOCKET_SERVER, align 4
  %10 = load i32, i32* %6, align 4
  %11 = load i8*, i8** %7, align 8
  %12 = load i32, i32* %8, align 4
  %13 = call i32 @socket_server_udp_connect(i32 %9, i32 %10, i8* %11, i32 %12)
  ret i32 %13
}

declare dso_local i32 @socket_server_udp_connect(i32, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
